--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mysql2": "^3.14.1",
     "sequelize": "^6.37.7",
     "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
